# BobThebuilder

./: .env  README.md  app.js  index.html  script.js  skills.html  skills.js
.github/workflows/: azure-static-web-apps-mango-smoke-027137510.yml  azure-static-web-apps-wonderful-glacier-0ffb42710.yml  main_bob2.yml  main_yobob.yml  style.css
backend/: README.md  locustfile.py  main.py  pyproject.toml  sample_resume.txt  test_main.py  unit_tests.py
frontend/: index.html
