[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = ">=0.35.0,<0.36.0"
pydantic = ">=2.11.7,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0,<8.0.0"
pytest-asyncio = ">=0.21.0,<1.0.0"
httpx = ">=0.24.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
